--- a/bower.json
+++ b/bower.json
@@ -4,5 +4,8 @@
   "dependencies": {
     "bootstrap-sass-official": "~3.2.0",
     "modernizr": "~2.8.2"
+  },
+  "devDependencies": {
+    "mermaid": "~0.2.15"
   }
 }
